# telco-customer-churn-mlops

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bentofile.yaml  dev-requirements.txt  dvc.yaml  metrics.csv  pyproject.toml  requirements.txt
.github/workflows/: deploy_app.yaml  test_code.yaml
application/src/: create_app.py  create_service.py  save_model_to_bentoml.py
application/tests/: test_create_service.py  test_predict_endpoint.py  test_save_model.py
config/: main.yaml
config/model/: xgb_default.yaml
config/process/: numeric_only.yaml  with_contract.yaml
data/raw/: .gitignore  Telco-Customer-Churn.csv.dvc
monitoring/: drift_report.py
scripts/: download_data.py
training/src/: evaluate_model.py  helper.py  main.py  process.py  train_model.py
training/tests/: test_drift_report.py  test_evaluate_model.py  test_helper.py  test_main.py  test_model_quality.py  test_process.py  test_train_model.py
