[tool.poetry]
name = "churn-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for Telco Customer Churn"
authors = ["Kevin Raj <kevinraj20@gmail.com>"]
readme = "README.md"
packages = [
    {include = "training"},
    {include = "application"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dvc = "^3.50.0"
hydra-core = "^1.3.2"
pdoc3 = "^0.10.0"
xgboost = "^2.0.3"
mlflow = "^2.12.1"
hyperopt = "^0.2.7"
streamlit = "^1.33.0"
patsy = "^0.5.6"
pandera = "^0.18.3"
pytest-steps = "^1.8.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
joblib = "^1.4.0"
pydantic = "^1.10.15"
bentoml = "^1.2.12"
dagshub = {version = "^0.3.27", optional = true}
deepchecks = {version = "^0.18.1", optional = true}
evidently = {version = "^0.4.25", optional = true}

[tool.poetry.extras]
remote-tracking = ["dagshub"]
testing-extras = ["deepchecks"]
monitoring = ["evidently"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^3.7.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 79
