[project]
name = "churn-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for Telco Customer Churn"
authors = [{name = "Kevin Raj", email = "kevinraj20@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dvc (>=3.50.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "pdoc3 (>=0.10.0,<0.11.0)",
    "xgboost (>=2.0.3,<3.0.0)",
    "mlflow (>=2.12.1,<3.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "streamlit (>=1.33.0,<2.0.0)",
    "patsy (>=0.5.6,<0.6.0)",
    "pandera (>=0.18.3,<0.19.0)",
    "pytest-steps (>=1.8.0,<2.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "scikit-learn (>=1.4.2,<2.0.0)",
    "joblib (>=1.4.0,<2.0.0)",
    "pydantic (>=2.5.0,<2.8.0)",
    "bentoml (>=1.2.12,<1.3.0)",
]

[project.optional-dependencies]
remote-tracking = ["dagshub (>=0.3.27,<0.4.0)"]
testing-extras = ["deepchecks (>=0.18.1,<0.19.0)"]
monitoring = ["evidently (>=0.4.25,<0.5.0)"]

[tool.poetry]
packages = [
    {include = "training"},
    {include = "application"},
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^3.7.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 79
